# custom-dynamodb-orm

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  attributes.py  converters.py  decorators.py  mapper.py  model.py  order_example.py  serialization.py
